Atualização projeto 23/jan

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,20 @@
+{% load static %}
 <html>
     <head>
         <title>Mora APP</title>
-        <link rel="stylesheet" href="/static/css/main.css" />
+        <link rel="stylesheet" href="{% static 'css/main2.css' %}" />
     </head>
     <body>
-        <h1>Home PAGE</h1>
-
-        <script src="/static/js/first_file.js"></script>
+        <h1>Home PAGE 1</h1>
+        <script src="{% static 'js/first_file.js' %}"></script>
+        <nav>
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}"><span> Hi {{ user.username }} ! </span> Log Out</a>
+                <a href="{% url 'password_change' %}">Change Password</a>
+            {% else %}
+                <a href="{% url 'register' %}">Register</a>
+                <a href="{% url 'login' %}">Log In</a>
+            {% endif %}
+        </nav>
     </body>
 </html>
